--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <header class='header'>
         <div class='img-wrapper'>
-          <img src='images/backgroundimage.png'>
+          <img src='https://github.com/VAIBHAVPATEL97/VAIBHAVPATEL97.github.io/blob/main/backgroundimage.png'>
         </div>
         <div class="banner">
           <h1> I love to code</h1>
@@ -49,7 +49,7 @@
           <a href="https://www.linkedin.com/in/vaibhavpatel11"> <i class="fab fa-linkedin-in"> </i> </a>
           <a href="https://github.com/VAIBHAVPATEL97"><i class="fab fa-github"> </i> </a>
           <a href="mailto:vp161197@gmail.com""> <i class="fas fa-at"> </i> </a>
-        </div>
+        </div>  
       </section> 
     </div>
 
