--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
       <header class='header'>
         <div class='img-wrapper'>
-          <img src='https://github.com/VAIBHAVPATEL97/VAIBHAVPATEL97.github.io/blob/main/backgroundimage.png'>
+          <img src='https://raw.githubusercontent.com/VAIBHAVPATEL97/VAIBHAVPATEL97.github.io/main/backgroundimage.png'>
         </div>
         <div class="banner">
           <h1> I love to code</h1>
